--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.search.SearchFragment">
 
-
+<!--title-->
     <TextView
         android:id="@+id/searchTitle"
         android:layout_width="wrap_content"
@@ -21,21 +21,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="wrap_content"
+    
+    <!--    search-->
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-
-        android:layout_width="397dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="16dp"
-        android:hint="Search"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="20dp"
+        android:background="#FAF9F9"
+        android:queryHint="@string/title_search"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchTitle" />
+
+
+    <!--    tabs-->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView">
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/forHim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For Him"
+            tools:ignore="HardcodedText"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/forHer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For Her"
+            tools:ignore="HardcodedText"
+            tools:layout_editor_absoluteX="142dp"
+            tools:layout_editor_absoluteY="167dp" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/forKids"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For Kids"
+            tools:ignore="HardcodedText" />
+
+    </com.google.android.material.tabs.TabLayout>
+
+   
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
