fixed bug with fonts

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/navigation_search"
         android:name="com.example.myapplication.ui.search.SearchFragment"
-        android:label="@string/search"
+        android:label="@string/title_search"
         tools:layout="@layout/fragment_home" />
 
     <fragment
