--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -21,4 +21,9 @@
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/title_search" />
 
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_baseline_menu_24"
+        android:title="@string/title_profile" />
+
 </menu>
