--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#A8DADC</color>
+    <color name="medium_blue">#457b9d</color>
+    <color name="dark_blue">#1d3557</color>
+    <color name="like_white">#f1faee</color>
+    <color name="like_red">#e63946</color>
+
 </resources>
