--- a/app/src/main/res/layout/item_fav.xml
+++ b/app/src/main/res/layout/item_fav.xml
@@ -7,67 +7,76 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView"
-
+        android:id="@+id/photoImageView"
         android:layout_width="70dp"
         android:layout_height="80dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/ic_baseline_yard_24"
+        android:src="@drawable/ic_baseline_photo_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_baseline_favorite_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="8dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textSize="12dp"
-        android:id="@+id/textView"
+        android:id="@+id/firstTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="Aldo"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        tools:layout_editor_absoluteY="8dp" />
+        android:textSize="12dp"
+        app:layout_constraintStart_toEndOf="@+id/photoImageView"
+        app:layout_constraintTop_toTopOf="@id/photoImageView" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:textSize="16dp"        android:layout_width="wrap_content"
-
         android:text="Almond Toe"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/photoImageView"
+        app:layout_constraintTop_toBottomOf="@id/firstTextView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:id="@+id/sizeTextView"
+        android:layout_marginStart="24dp"
         android:text="Size: 9 US"
         android:textColor="@color/black"
         android:textSize="12dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        tools:layout_editor_absoluteX="138dp" />
+        app:layout_constraintStart_toEndOf="@id/photoImageView"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
         android:text="AED 45"
         android:textColor="@color/black"
         android:textSize="16dp"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="77dp" />
+        app:layout_constraintStart_toEndOf="@id/photoImageView"
+        app:layout_constraintTop_toBottomOf="@id/sizeTextView" />
 
+    <ImageView
+        android:id="@+id/heartImageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_baseline_favorite_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="photoImageView"/>
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toBottomOf="@id/barrier"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
