Revert "added some colors"
This reverts commit 9fb8612c

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,11 +5,9 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue"
     tools:context=".ui.search.SearchFragment">
 
-
-    <!--title-->
+<!--title-->
     <TextView
         android:id="@+id/searchTitle"
         android:layout_width="wrap_content"
@@ -17,9 +15,7 @@
         android:layout_marginTop="15dp"
         android:fontFamily="@font/maven_pro"
         android:text="@string/title_search"
-        android:textColor="@color/dark_blue"
         android:textSize="32sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.073"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +39,39 @@
 
 
     <!--    tabs-->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView">
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/forHim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For Him"
+            tools:ignore="HardcodedText" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/forHer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For Her"
+            tools:ignore="HardcodedText"
+            tools:layout_editor_absoluteX="142dp"
+            tools:layout_editor_absoluteY="167dp" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/forKids"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For Kids"
+            tools:ignore="HardcodedText" />
+
+    </com.google.android.material.tabs.TabLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
